compiler/tests-spec/testData/diagnostics/s-xx.xx_contracts/analysys/smartcasts/neg/1.kt
/*
 KOTLIN DIAGNOSTICS FUTURE SPEC TEST (NEGATIVE)

 SECTION XX.XX: Contracts
 CATEGORY: analysys, smartcasts
 NUMBER: 1
 DESCRIPTION: Empty 'when' with bound value.
 */

fun case_1(value: Int) {
    when (<!UNUSED_EXPRESSION!>value<!>) {}
}
